--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
