--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
